--- a/views/index.erb
+++ b/views/index.erb
@@ -7,11 +7,11 @@
       <th>Email</th>
     </tr>
 
-    <% @contacts.each do |contact| %>
+    <% @leads.each do |lead| %>
       <tr>
-        <td><%= contact.firstname %></td>
-        <td><%= contact.lastname %></td>
-        <td><%= contact.email %></td>
+        <td><%= lead.firstname %></td>
+        <td><%= lead.lastname %></td>
+        <td><%= lead.email %></td>
       </tr>
     <% end %>
   </table>
