--- a/views/form.erb
+++ b/views/form.erb
@@ -1,3 +1,4 @@
+<div class="formulaire">
 <h1>Inscription</h1>
 
 <%= form_for(@user) do |f| %>
@@ -21,3 +22,4 @@
     <%= f.submit "Inscription" %>
   </div>
 <% end %>
+</div>
