--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
       <th>First Name</th>
       <th>Last Name</th>
       <th>Email</th>
-      <th>Company/th>
+      <th>Company</th>
     </tr>
 
     <% @leads.each do |lead| %>
