--- a/views/form.erb
+++ b/views/form.erb
@@ -1,25 +1,10 @@
 
 <h1>Inscription</h1>
 
-<%= form_for(@user) do |f| %>
+<%= lead(@user) do |lead| %>
   <div class="field">
-    <%= f.label :nom %><br />
-    <%= f.text_field :nom %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirmation" %><br />
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Inscription" %>
+    <%= lead.firstname :prénom %><br />
+    <%= lead.firstname :prénom %>
   </div>
 <% end %>
 
