--- a/views/form.erb
+++ b/views/form.erb
@@ -1,3 +1,5 @@
-<%= form_for @person, builder: LabellingFormBuilder do |f| %>
-  <%= f.text_field :first_name %>
+<%= form_for @article, url: {action: "create"} do |f| %>
+  <%= f.text_field :title %>
+  <%= f.text_area :body, size: "60x12" %>
+  <%= f.submit "Create" %>
 <% end %>
