--- a/views/form.erb
+++ b/views/form.erb
@@ -1,6 +1,6 @@
 <h1>Inscription</h1>
 
-<%= form_for(@user) do |f| %>
+<%= form_for(@lead) do |f| %>
   <div class="field">
     <%= f.label :nom %><br />
     <%= f.text_field :nom %>
