--- a/views/index.erb
+++ b/views/index.erb
@@ -18,4 +18,9 @@
     <% end %>
   </table>
  
+ <%= link_to 'New', new_task_path(@task) %>
+<%= link_to 'Back', tasks_path %>
+<br/>
+<br/>
+
 </div>
